Compiladores/gen/grammar/MiniLangParser.py
# Generated from grammar/MiniLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniLangParser ( Parser ):

    grammarFileName = "MiniLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'func'", "'while'", "'for'", "'return'", 
                     "'void'", "'program'", "'if'", "'else'", "'print'", 
                     "'int'", "'bool'", "'float'", "'string'", "'true'", 
                     "'false'", "'&&'", "'||'", "'!'", "'=='", "<INVALID>", 
                     "'<='", "'>='", "'<'", "'>'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','" ]

    symbolicNames = [ "<INVALID>", "FUNC", "MIENTRAS", "PARA", "RETORNAR", 
                      "VOID", "PROGRAMA", "SI", "SINO", "IMPRIMIR", "TIPO_ENTERO", 
                      "TIPO_BOOL", "TIPO_FLOAT", "TIPO_STRING", "VERDADERO", 
                      "FALSO", "Y_LOGICO", "O_LOGICO", "NEGACION", "IGUAL", 
                      "DIFERENTE", "MENOR_IGUAL", "MAYOR_IGUAL", "MENOR_QUE", 
                      "MAYOR_QUE", "ASIGNACION", "SUMA", "RESTA", "MULTIPLICACION", 
                      "DIVISION", "PAREN_IZQ", "PAREN_DER", "LLAVE_IZQ", 
                      "LLAVE_DER", "CORCHETE_IZQ", "CORCHETE_DER", "PUNTO_COMA", 
                      "COMA", "IDENTIFICADOR", "FLOTANTE", "ENTERO", "CADENA", 
                      "ESPACIO", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE" ]

    RULE_programa = 0
    RULE_funcion = 1
    RULE_listaParametros = 2
    RULE_parametro = 3
    RULE_tipoRetorno = 4
    RULE_bloque = 5
    RULE_sentencia = 6
    RULE_declaracionVariable = 7
    RULE_tipo = 8
    RULE_asignacion = 9
    RULE_condicionalSi = 10
    RULE_imprimir = 11
    RULE_mientras = 12
    RULE_para = 13
    RULE_paraInicio = 14
    RULE_paraActualizacion = 15
    RULE_retorno = 16
    RULE_llamadaFuncionStmt = 17
    RULE_listaArgumentos = 18
    RULE_expresion = 19

    ruleNames =  [ "programa", "funcion", "listaParametros", "parametro", 
                   "tipoRetorno", "bloque", "sentencia", "declaracionVariable", 
                   "tipo", "asignacion", "condicionalSi", "imprimir", "mientras", 
                   "para", "paraInicio", "paraActualizacion", "retorno", 
                   "llamadaFuncionStmt", "listaArgumentos", "expresion" ]

    EOF = Token.EOF
    FUNC=1
    MIENTRAS=2
    PARA=3
    RETORNAR=4
    VOID=5
    PROGRAMA=6
    SI=7
    SINO=8
    IMPRIMIR=9
    TIPO_ENTERO=10
    TIPO_BOOL=11
    TIPO_FLOAT=12
    TIPO_STRING=13
    VERDADERO=14
    FALSO=15
    Y_LOGICO=16
    O_LOGICO=17
    NEGACION=18
    IGUAL=19
    DIFERENTE=20
    MENOR_IGUAL=21
    MAYOR_IGUAL=22
    MENOR_QUE=23
    MAYOR_QUE=24
    ASIGNACION=25
    SUMA=26
    RESTA=27
    MULTIPLICACION=28
    DIVISION=29
    PAREN_IZQ=30
    PAREN_DER=31
    LLAVE_IZQ=32
    LLAVE_DER=33
    CORCHETE_IZQ=34
    CORCHETE_DER=35
    PUNTO_COMA=36
    COMA=37
    IDENTIFICADOR=38
    FLOTANTE=39
    ENTERO=40
    CADENA=41
    ESPACIO=42
    COMENTARIO_LINEA=43
    COMENTARIO_BLOQUE=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(MiniLangParser.PROGRAMA, 0)

        def bloque(self):
            return self.getTypedRuleContext(MiniLangParser.BloqueContext,0)


        def EOF(self):
            return self.getToken(MiniLangParser.EOF, 0)

        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.FuncionContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.FuncionContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MiniLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 40
                self.funcion()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(MiniLangParser.PROGRAMA)
            self.state = 47
            self.bloque()
            self.state = 48
            self.match(MiniLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MiniLangParser.FUNC, 0)

        def IDENTIFICADOR(self):
            return self.getToken(MiniLangParser.IDENTIFICADOR, 0)

        def PAREN_IZQ(self):
            return self.getToken(MiniLangParser.PAREN_IZQ, 0)

        def PAREN_DER(self):
            return self.getToken(MiniLangParser.PAREN_DER, 0)

        def tipoRetorno(self):
            return self.getTypedRuleContext(MiniLangParser.TipoRetornoContext,0)


        def bloque(self):
            return self.getTypedRuleContext(MiniLangParser.BloqueContext,0)


        def listaParametros(self):
            return self.getTypedRuleContext(MiniLangParser.ListaParametrosContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_funcion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = MiniLangParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(MiniLangParser.FUNC)
            self.state = 51
            self.match(MiniLangParser.IDENTIFICADOR)
            self.state = 52
            self.match(MiniLangParser.PAREN_IZQ)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0):
                self.state = 53
                self.listaParametros()


            self.state = 56
            self.match(MiniLangParser.PAREN_DER)
            self.state = 57
            self.tipoRetorno()
            self.state = 58
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.ParametroContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.ParametroContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.COMA)
            else:
                return self.getToken(MiniLangParser.COMA, i)

        def getRuleIndex(self):
            return MiniLangParser.RULE_listaParametros

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaParametros" ):
                return visitor.visitListaParametros(self)
            else:
                return visitor.visitChildren(self)




    def listaParametros(self):

        localctx = MiniLangParser.ListaParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listaParametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.parametro()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 61
                self.match(MiniLangParser.COMA)
                self.state = 62
                self.parametro()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiniLangParser.TipoContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(MiniLangParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_parametro

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = MiniLangParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.tipo()
            self.state = 69
            self.match(MiniLangParser.IDENTIFICADOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoRetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiniLangParser.TipoContext,0)


        def VOID(self):
            return self.getToken(MiniLangParser.VOID, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_tipoRetorno

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoRetorno" ):
                return visitor.visitTipoRetorno(self)
            else:
                return visitor.visitChildren(self)




    def tipoRetorno(self):

        localctx = MiniLangParser.TipoRetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipoRetorno)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 12, 13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.tipo()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(MiniLangParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_IZQ(self):
            return self.getToken(MiniLangParser.LLAVE_IZQ, 0)

        def LLAVE_DER(self):
            return self.getToken(MiniLangParser.LLAVE_DER, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = MiniLangParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MiniLangParser.LLAVE_IZQ)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 274877922972) != 0):
                self.state = 76
                self.sentencia()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(MiniLangParser.LLAVE_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionVariable(self):
            return self.getTypedRuleContext(MiniLangParser.DeclaracionVariableContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(MiniLangParser.AsignacionContext,0)


        def condicionalSi(self):
            return self.getTypedRuleContext(MiniLangParser.CondicionalSiContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(MiniLangParser.ImprimirContext,0)


        def mientras(self):
            return self.getTypedRuleContext(MiniLangParser.MientrasContext,0)


        def para(self):
            return self.getTypedRuleContext(MiniLangParser.ParaContext,0)


        def retorno(self):
            return self.getTypedRuleContext(MiniLangParser.RetornoContext,0)


        def llamadaFuncionStmt(self):
            return self.getTypedRuleContext(MiniLangParser.LlamadaFuncionStmtContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_sentencia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = MiniLangParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sentencia)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.declaracionVariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.condicionalSi()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.imprimir()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.mientras()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.para()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.retorno()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 91
                self.llamadaFuncionStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiniLangParser.TipoContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(MiniLangParser.IDENTIFICADOR, 0)

        def PUNTO_COMA(self):
            return self.getToken(MiniLangParser.PUNTO_COMA, 0)

        def ASIGNACION(self):
            return self.getToken(MiniLangParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiniLangParser.ExpresionContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_declaracionVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionVariable" ):
                return visitor.visitDeclaracionVariable(self)
            else:
                return visitor.visitChildren(self)




    def declaracionVariable(self):

        localctx = MiniLangParser.DeclaracionVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracionVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.tipo()
            self.state = 95
            self.match(MiniLangParser.IDENTIFICADOR)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 96
                self.match(MiniLangParser.ASIGNACION)
                self.state = 97
                self.expresion(0)


            self.state = 100
            self.match(MiniLangParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO_ENTERO(self):
            return self.getToken(MiniLangParser.TIPO_ENTERO, 0)

        def TIPO_BOOL(self):
            return self.getToken(MiniLangParser.TIPO_BOOL, 0)

        def TIPO_FLOAT(self):
            return self.getToken(MiniLangParser.TIPO_FLOAT, 0)

        def TIPO_STRING(self):
            return self.getToken(MiniLangParser.TIPO_STRING, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_tipo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MiniLangParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(MiniLangParser.IDENTIFICADOR, 0)

        def ASIGNACION(self):
            return self.getToken(MiniLangParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiniLangParser.ExpresionContext,0)


        def PUNTO_COMA(self):
            return self.getToken(MiniLangParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = MiniLangParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MiniLangParser.IDENTIFICADOR)
            self.state = 105
            self.match(MiniLangParser.ASIGNACION)
            self.state = 106
            self.expresion(0)
            self.state = 107
            self.match(MiniLangParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalSiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(MiniLangParser.SI, 0)

        def PAREN_IZQ(self):
            return self.getToken(MiniLangParser.PAREN_IZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiniLangParser.ExpresionContext,0)


        def PAREN_DER(self):
            return self.getToken(MiniLangParser.PAREN_DER, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.BloqueContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.BloqueContext,i)


        def SINO(self):
            return self.getToken(MiniLangParser.SINO, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_condicionalSi

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionalSi" ):
                return visitor.visitCondicionalSi(self)
            else:
                return visitor.visitChildren(self)




    def condicionalSi(self):

        localctx = MiniLangParser.CondicionalSiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicionalSi)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MiniLangParser.SI)
            self.state = 110
            self.match(MiniLangParser.PAREN_IZQ)
            self.state = 111
            self.expresion(0)
            self.state = 112
            self.match(MiniLangParser.PAREN_DER)
            self.state = 113
            self.bloque()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 114
                self.match(MiniLangParser.SINO)
                self.state = 115
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPRIMIR(self):
            return self.getToken(MiniLangParser.IMPRIMIR, 0)

        def PAREN_IZQ(self):
            return self.getToken(MiniLangParser.PAREN_IZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiniLangParser.ExpresionContext,0)


        def PAREN_DER(self):
            return self.getToken(MiniLangParser.PAREN_DER, 0)

        def PUNTO_COMA(self):
            return self.getToken(MiniLangParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return MiniLangParser.RULE_imprimir

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImprimir" ):
                return visitor.visitImprimir(self)
            else:
                return visitor.visitChildren(self)




    def imprimir(self):

        localctx = MiniLangParser.ImprimirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_imprimir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MiniLangParser.IMPRIMIR)
            self.state = 119
            self.match(MiniLangParser.PAREN_IZQ)
            self.state = 120
            self.expresion(0)
            self.state = 121
            self.match(MiniLangParser.PAREN_DER)
            self.state = 122
            self.match(MiniLangParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MientrasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(MiniLangParser.MIENTRAS, 0)

        def PAREN_IZQ(self):
            return self.getToken(MiniLangParser.PAREN_IZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiniLangParser.ExpresionContext,0)


        def PAREN_DER(self):
            return self.getToken(MiniLangParser.PAREN_DER, 0)

        def bloque(self):
            return self.getTypedRuleContext(MiniLangParser.BloqueContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_mientras

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMientras" ):
                return visitor.visitMientras(self)
            else:
                return visitor.visitChildren(self)




    def mientras(self):

        localctx = MiniLangParser.MientrasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_mientras)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MiniLangParser.MIENTRAS)
            self.state = 125
            self.match(MiniLangParser.PAREN_IZQ)
            self.state = 126
            self.expresion(0)
            self.state = 127
            self.match(MiniLangParser.PAREN_DER)
            self.state = 128
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(MiniLangParser.PARA, 0)

        def PAREN_IZQ(self):
            return self.getToken(MiniLangParser.PAREN_IZQ, 0)

        def PUNTO_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.PUNTO_COMA)
            else:
                return self.getToken(MiniLangParser.PUNTO_COMA, i)

        def PAREN_DER(self):
            return self.getToken(MiniLangParser.PAREN_DER, 0)

        def bloque(self):
            return self.getTypedRuleContext(MiniLangParser.BloqueContext,0)


        def paraInicio(self):
            return self.getTypedRuleContext(MiniLangParser.ParaInicioContext,0)


        def expresion(self):
            return self.getTypedRuleContext(MiniLangParser.ExpresionContext,0)


        def paraActualizacion(self):
            return self.getTypedRuleContext(MiniLangParser.ParaActualizacionContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):
